# quiz_python_42

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.docker/: .env
.docker/nginx/: nginx.conf
.docker/postgres/: .env
.docker/postgres/init_scripts/: initial_dump.sql
alembic/: env.py
alembic/versions/: 34de787e79f7_add_questions_table.py  5fdf40a37c9d_add_user_table.py  d1af627713b4_add_superuser.py
public/: index.html  login.html  registration.html
public/js/: login.js  main.js  registration.js
public/templates/: index.html
scripts/: create_migration.bat  create_migration.sh
src/: main.py  middleware.py
src/models/: entities.py  schemas.py
src/routers/: auth.py  user.py
src/services/: auth_service.py  monitoring_service.py  sessions.py
