[tool.poetry]
name = "hellofastapi"
version = "0.2.0"
description = ""
authors = ["Your name <example@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.118.0"
uvicorn = "^0.37.0"
psycopg2-binary = "^2.9.11"
SQLAlchemy = "^2.0.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
